advgetopt (2.0.35.0~bionic) bionic; urgency=high

  * Added tool to automatically generate Atomic Names.
  * Added a exists() function for configuration files.
  * Fixes to the CMakeLists.txt files.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 12 Mar 2022 10:35:31 -0800

advgetopt (2.0.34.0~bionic) bionic; urgency=high

  * Fixed the variables that are not set when having REQUIRE.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 06 Mar 2022 11:21:14 -0800

advgetopt (2.0.33.0~bionic) bionic; urgency=high

  * Fixed the loop through options making it a reference.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 05 Mar 2022 23:12:37 -0800

advgetopt (2.0.32.0~bionic) bionic; urgency=high

  * Added a test to forbid "/filename.conf" as a configuration filename.
  * Added a default_group_name() function.
  * Added support for a variable name for each option.
  * Updated the README.md a little mode.
  * Updated the tests to pass against the new environment variable handling.
  * Added an option specific variable to the edit-config tool as an example.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 05 Mar 2022 09:39:06 -0800

advgetopt (2.0.31.0~bionic) bionic; urgency=high

  * Fixed compiling issue from 2.0.30 (edit_config.cpp).
  * Added support for multiple duration values (i.e. "3m 10s").
  * Added tests to verify that multiple durations work.
  * Fixed the tests affected by the mew handling of the default value.
  * Added a UTF-8 string in one of the tests.
  * Fixed a test which had no assertions so it passes the coverage test.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 01 Mar 2022 12:59:45 -0800

advgetopt (2.0.30.0~bionic) bionic; urgency=high

  * Allow for the output of a config file to either use '-' or '_'.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 26 Feb 2022 20:42:37 -0800

advgetopt (2.0.29.0~bionic) bionic; urgency=high

  * Added support for spaces and colons as assignment operators in edit-config.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 24 Feb 2022 21:16:31 -0800
