@@ -1,8 +1,9 @@
 advgetopt (2.0.35.0~bionic) bionic; urgency=high
 
-  * Added tool to automatically generate Atomic Names.
+  * Added tool/cmake rule to automatically generate Atomic Names.
   * Added a exists() function for configuration files.
   * Fixes to the CMakeLists.txt files.
+  * Removed one more dependency on boost.
 
  -- Alexis Wilke <alexis@m2osw.com>  Sat, 12 Mar 2022 10:35:31 -0800
 
